--- a/src/index.css
+++ b/src/index.css
@@ -2,33 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-  .panel {
-    --aug-border-all: 0.2vh;
-    --aug-inset: 5px;
-  }
-
-  .tron {
-    --aug-border-bg: #aacfd1;
-  }
-
-  .apollo {
-    --aug-border-bg: #ebebebff;
-  }
-
-  .blade {
-    --aug-border-bg: #cc5e37;
-  }
-
-  .cyborg {
-    --aug-border-bg: #a3c2c2;
-  }
-
-  .interstellar {
-    --aug-border-bg: #03a9f4;
-  }
-}
-
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -50,4 +23,117 @@
 @font-face {
   font-family: 'united-sans-medium';
   src: url('/fonts/united_sans_medium.woff2') format('woff2');
+}
+
+@layer base {
+  html[data-theme='tron'] {
+    /*background*/
+    --bg-main: 5 8 13;
+    --bg-secondary: 38 40 40;
+    --bg-active: 170 207 209;
+    --bg-hover: 170 207 209;
+
+    /* border */
+    --border-default: 170 207 209;
+
+    /* text */
+    --text-main: 170 207 209;
+    --text-active: 5 8 13;
+    --text-hover: 5 8 13;
+
+    /* colors */
+    --color-stroke: rgb(170, 207, 209);
+    --color-shade: #262828;
+  }
+
+  html[data-theme='apollo'] {
+    /*background*/
+    --bg-main: 25 25 25;
+    --bg-secondary: 38 40 39;
+    --bg-active: 235 235 235;
+    --bg-hover: 235 235 235;
+
+    /* border */
+    --border-default: 235 235 235;
+
+    /* text */
+    --text-main: 235 235 235;
+    --text-active: 25 25 25;
+    --text-hover: 25 25 25;
+
+    /* colors */
+    --color-stroke: rgb(235, 235, 235);
+    --color-shade: #262827;
+  }
+
+  html[data-theme='blade'] {
+    /*background*/
+    --bg-main: 9 11 10;
+    --bg-secondary: 38 40 39;
+    --bg-active: 204 94 55;
+    --bg-hover: 204 94 55;
+
+    /* border */
+    --border-default: 204 94 55;
+
+    /* text */
+    --text-main: 204 94 55;
+    --text-active: 9 11 10;
+    --text-hover: 9 11 10;
+
+    /* colors */
+    --color-stroke: rgb(204, 94, 55);
+    --color-shade: #262827;
+  }
+
+  html[data-theme='cyborg'] {
+    /*background*/
+    --bg-main: 10 51 51;
+    --bg-secondary: 3 71 71;
+    --bg-active: 163 194 194;
+    --bg-hover: 163 194 194;
+
+    /* border */
+    --border-default: 163 194 194;
+
+    /* text */
+    --text-main: 163 194 194;
+    --text-active: 10 51 51;
+    --text-hover: 10 51 51;
+
+    /* colors */
+    --color-stroke: rgb(95, 215, 215);
+    --color-shade: #034747;
+  }
+
+  html[data-theme='interstellar'] {
+    /*interstellar*/
+    --bg-main: 222 222 222;
+    --bg-secondary: 191 191 191;
+    --bg-active: 3 169 244;
+    --bg-hover: 3 169 244;
+
+    /* border */
+    --border-default: 3 169 244;
+
+    /* text */
+    --text-main: 3 169 244;
+    --text-active: 222 222 222;
+    --text-hover: 222 222 222;
+
+    /* colors */
+    --color-stroke: rgb(3, 169, 244);
+    --color-shade: #bfbfbf;
+  }
+}
+
+@layer components {
+  .panel {
+    --aug-border-all: 0.2vh;
+    --aug-inset: 5px;
+  }
+
+  .augment-border {
+    --aug-border-bg: rgb(var(--border-default));
+  }
 }
